--- a/public/css/style.css
+++ b/public/css/style.css
@@ -573,15 +573,16 @@ label
 
 .btn-main
 {
-    font-size: 11px;
+ /*   font-size: 11px;
     font-weight: 700;
 
     letter-spacing: 2px;
 
-    border-width: 0 0 2px 0;
+    border-width: 0 0 2px 0;*/
+  
     border-style: solid;
     border-color: #02aef0;
-    background: rgba(0,0,0,.2);
+/*    background: rgba(0,0,0,.2);*/
 }
 
 .btn-main:hover,
