fixed scrolling issue, added wells and thumbnail card for bootstrap 3

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -152,11 +152,14 @@ ul
 
 .col-right
 {
-    display: table;
+    /*display: table;*/
     float: right;
 
     width: 70%;
     height: 100%;
+    position: fixed;
+    left: 30%;
+    overflow-y: auto;
 }
 
 .col-right a:hover
