edited events show page and toggle on groups show page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -171,8 +171,7 @@ ul
 {
     display: table-cell;
 
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 20px;
 
     vertical-align: middle;
 
