--- a/public/css/style.css
+++ b/public/css/style.css
@@ -146,7 +146,7 @@ ul
     display: table;
     float: left;
 
-    width: 30%;
+    width: 25%;
     height: 100%;
 }
 
@@ -155,11 +155,14 @@ ul
     /*display: table;*/
     float: right;
 
-    width: 70%;
+    width: 75%;
     height: 100%;
     position: fixed;
-    left: 30%;
+    left: 25%;
     overflow-y: auto;
+    padding-left: 20px;
+    padding-top: 20px;
+
 }
 
 .col-right a:hover
@@ -446,8 +449,6 @@ ul
     font-size: 18px;
 
     padding-left: 15px;
-
-    content: '\00b7';
 
     color: #02aef0;
 }
